--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ dj-database-url==0.4.1
 Django==1.11.1
 djangorestframework==3.7.3
 gunicorn==19.6.0
+psycopg2==2.7.3.2
 pytz==2017.3
 whitenoise==3.2
