--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+certifi==2017.11.5
+chardet==3.0.4
 dj-database-url==0.4.1
-Django==1.11.1
+Django==1.11.7
+django-storages==1.6.5
 djangorestframework==3.7.3
+dropbox==8.5.0
 gunicorn==19.6.0
+idna==2.6
+olefile==0.44
+Pillow==4.3.0
 psycopg2==2.7.3.2
 pytz==2017.3
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
 whitenoise==3.2
